fix: alignment

--- a/src/assets/styles/defaults/vars.css
+++ b/src/assets/styles/defaults/vars.css
@@ -116,6 +116,7 @@
   /* svgs */
   --stroke-width-default: 1.4;
   --stroke-width-bold: 2;
+  --inline-margin-bottom: -6px;
 
   /* input accent color */
   accent-color: var(--accent-color);
