--- a/src/assets/styles/pages/books.css
+++ b/src/assets/styles/pages/books.css
@@ -118,7 +118,7 @@
 
       & svg {
         stroke: var(--music);
-        margin-bottom: -6px;
+        margin-bottom: var(--inline-margin-bottom);
       }
     }
   }
